<resources>
    <string name="app_name">MAD155Module3ConcertTickets</string>

    <string name="txtTitle">Ticket Vault</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="prompt">Select Group</string>
    <string name="txtSelectAGroup">Please select a group&#8230;</string>
    <string name="description">Concert Image</string>
    <string name="btnCost">FIND THE COST</string>

    <string-array name="txtGroup">
        <item>Life Revealed</item>
        <item>Spatial Sense</item>
        <item>Zig Zag</item>
    </string-array>



</resources>
